Fix spacing on the homepage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,7 @@ header.content {
 
 .faq-link {
     margin-top: 16px;
+    margin-bottom: 0px !important;
 }
 
 .twitter {
